# UAR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.dhall
.github/workflows/: cred-scan.yml  release.yml
src/: apis_ref.rs  authorization_policy_inventory.rs  banner.rs  cli.rs  error.rs  main.rs  report.rs  resource_inventory.rs  run_analysis.rs  user_inventory.rs
