[package]
name = "uar"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Outscale IAM Service Unit"]
homepage = "https://git.scaledome.io/iam/uar"
readme = "README.md"
repository = "https://git.scaledome.io/iam/uar"
publish = false #We don't publish in public crates.io
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive", "env"] }
csv = "1.3.0"
itertools = "0.13.0"
outscale_api = "1.10.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.6"
secrecy = "0.8.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.64"
